--- a/style.css
+++ b/style.css
@@ -1,166 +1,37 @@
-body{
-　　background-color: lightyellow;
+.inner {
+max-width: 1000px;
+margin: 0 auto;
+padding: 0 40px;
+box-sizing: content-box;
 }
-
-h1,h2 {
-　　margin: 0;
-　　padding: 1em 0;
-　　text-align: center;
-　　color: #ddd;
+.header {
+background: #fff;
+position: fixed;
+top: 0;
+left: 0;
+right: 0;
 }
-
-header{
-　　z-index: 10;
-　　height: 64px;
-　　position: absolute;
-　　top: 300px;
-　　background-color: #333;
-　　width: 100%;
-　　text-align: center;
-　　z-index: 2;
-　　box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
+.header-inner {
+display: flex;
+align-items: center;
 }
-
-a {
-　　color: #fff;
-　　text-transform: uppercase;
+.header-title a{
+color: #333;
+font-size: 24px;
+font-weight: bold;
 }
-
-ul {
-　　overflow:hidden;
-　　list-style:none;
-　　margin: 0 auto;
-　　z-index: 20;
+.header-nav {
+margin-left: auto;
 }
-
-ul li {
-　　display: inline-block;
-　　padding: 26px 10px 20px 10px;
+.header-nav-list {
+display: flex;
 }
-
-ul li:hover {
-　　-webkit-transform-origin: left top;
-　　-ms-transform-origin: left top;
-　　transform-origin: left top;
-　　-webkit-transform: scale(1, 1);
-　　-ms-transform: scale(1, 1);
-　　transform: scale(1, 1)
+.header-nav-item:not(:first-child){
+margin-left: 40px;
 }
-.spaser{
-　　height: 100px;
-}
-.top-image-area{
-　　width: 100%;
-　　height: 300px;
-　　background-image: url("../img/topimage.jpg");
-　　background-position: 50% 20%;
-　　background-size: cover;
-}
-.logo-container{
-　　width: 70px;
-　　height: 70px;
-　　margin-left: 10px;
-}
-.logo-container img{
-　　height: 100%;
-　　width: 100%;
-}
-
-.slanting {
-　　position: relative;
-　　height: 200px;
-　　background: #ddd;
-}
-svg {
-　　position: absolute;
-　　bottom: 0;
-　　width: 100%;
-　　height: 200px;
-　　fill: #5f5f5f;
-}
-.contents {
-
-}
-.footer{
-　　height: 200px;
-　　background: black;
-　　color: #fff;
-　　clear: both;
-}
-.main-contents, .left-navi, .right-navi {
-　　height: 100%;
-}
-.main-contents {
-　　float: left;
-　　width: 80%;
-}
-.left-navi {
-　　background-color: blue;
-　　color: #fff;
-　　width: 20%;
-　　float: right;
-　　height: 400px;
-　　margin-top: 64px;
-}
-.right-navi {
-　　background-color: blueviolet;
-　　color: #fff;
-　　float: right;
-　　width: 20%;
-　　height: 400px;
-}
-.main{
-　　width: 80%;
-　　float: right;
-　　margin-top: 64px;
-}
-@media screen and (max-width: 600px){
-　　.main, .left-navi,.main-contents, .right-navi{
-　　width: 100%;
-}
-}
-
-.btn4{
-　　text-transform: uppercase;
-　　text-align: center;
-　　position: relative;
-　　text-decoration: none;
-　　display:inline-block;
-}
-
-.btn4::before {
-　　content: '';
-　　position: absolute;
-　　bottom: -2px;
-　　left: 0px;
-　　width: 100%;
-　　height: 2px;
-　　background: #3367ff;
-　　display: block;
-　　-webkit-transform-origin: right top;
-　　-ms-transform-origin: right top;
-　　transform-origin: right top;
-　　-webkit-transform: scale(0, 1);
-　　-ms-transform: scale(0, 1);
-　　transform: scale(0, 1);
-　　-webkit-transition: transform 0.4s cubic-bezier(1, 0, 0, 1);
-　　transition: transform 0.4s cubic-bezier(1, 0, 0, 1)
-}
-.btn4:hover::before {
-　　-webkit-transform-origin: left top;
-　　-ms-transform-origin: left top;
-　　transform-origin: left top;
-　　-webkit-transform: scale(1, 1);
-　　-ms-transform: scale(1, 1);
-　　transform: scale(1, 1)
-}
-
-.btn2{
-　　text-transform: uppercase;
-　　text-align: center;
-　　position: relative;
-　　text-decoration: none;
-　　display:inline-block;
-　　border-bottom: 2px solid #3367ff;
-
+.header-nav-item-link {
+display: block;
+color: #333;
+height: 80px;
+line-height: 80px;
 }
