--- a/style.css
+++ b/style.css
@@ -1,37 +1,29 @@
-.inner {
-max-width: 1000px;
-margin: 0 auto;
-padding: 0 40px;
-box-sizing: content-box;
-}
 .header {
-background: #fff;
-position: fixed;
-top: 0;
-left: 0;
-right: 0;
+  width: 100%;
+  height: 500px;
+  background-image: url(header-img.jpg);
 }
-.header-inner {
-display: flex;
-align-items: center;
+.navigation {
+  width: 100%;
+  height: 60px;
+  background-color: #383737;
+  padding-top: 15px;
+  box-sizing: border-box;
 }
-.header-title a{
-color: #333;
-font-size: 24px;
-font-weight: bold;
+.navigation ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
 }
-.header-nav {
-margin-left: auto;
+.navigation li {
+  margin-right: 55px;
 }
-.header-nav-list {
-display: flex;
+.navigation a {
+  color: #fff;
+  text-decoration: none;
 }
-.header-nav-item:not(:first-child){
-margin-left: 40px;
-}
-.header-nav-item-link {
-display: block;
-color: #333;
-height: 80px;
-line-height: 80px;
+.title-wrapper h1 {
+  margin-top: 130px;
+  margin-left: 120px;
+  font-size: 50px;
 }
