--- a/style.css
+++ b/style.css
@@ -35,3 +35,11 @@
   height: 400px;
   background-color: gray;
 }
+
+.pixivclass2 {
+  position: absolute;
+  top: 300px;
+  left: 0px;
+  width: 0px;
+  height: 0px;
+}
