--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .navigation {
   width: 100%;
   height: 60px;
-  background-color: #383737;
+  background-color: #a9ceec;
   padding-top: 15px;
   box-sizing: border-box;
 }
@@ -20,7 +20,7 @@
   margin-right: 55px;
 }
 .navigation a {
-  color: #fff;
+  color: #a9ceec;
   text-decoration: none;
 }
 .title-wrapper h1 {
