--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .navigation {
   width: 100%;
   height: 70px;
-  background-color: #a9ceec;
+  background-color: #0067c0;
   padding-top: 15px;
   box-sizing: border-box;
 }
@@ -20,7 +20,7 @@
   margin-right: 55px;
 }
 .navigation a {
-  color: #a9ceec;
+  color: ##0067c0;
   text-decoration: none;
 }
 .title-wrapper h1 {
