--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
   margin-right: 55px;
 }
 .navigation a {
-  color: ##0067c0;
+  color: #FFFFFF;
   text-decoration: none;
 }
 .title-wrapper h1 {
