--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 .header {
   font-family: HeadLineA;
   width: 100%;
+  left: 0;
+	position: fixed;
+	top: 0;
   height: 250px;
   background-image: url(header-img.jpg);
 }
