--- a/style.css
+++ b/style.css
@@ -37,6 +37,6 @@
 
 .fuchidori {
   color: #000;
-  -webkit-text-stroke: 1px #FFF;
-  text-stroke: 1px #FFF;
+  -webkit-text-stroke: 1px #0067c0;
+  text-stroke: 1px #0067c0;
 }
