--- a/style.css
+++ b/style.css
@@ -44,3 +44,16 @@
   -webkit-text-stroke: 1px #0067c0;
   text-stroke: 1px #0067c0;
 }
+
+
+<style>
+.dk_pix{
+    display: inline-block;
+}
+.example img{
+    display: block;
+}
+</style>
+<a href="#" class="example">
+    <img width="200" src="https://whitetails.jp/" alt="ねこ">
+</a>
