--- a/style.css
+++ b/style.css
@@ -118,11 +118,12 @@
 
 a.btn--orange {
   color: #fff;
+  width="100px"
   background-color: #0067c0;
   border-bottom: 5px solid #2000bf;
 }
 a.btn--orange:hover {
-  margin-top: 3px;
+  margin-top: 5px;
   color: #FFF;
   background: #0067c0;
   border-bottom: 2px solid #2000bf;
