--- a/style.css
+++ b/style.css
@@ -116,6 +116,42 @@
     margin: 0;
 }
 
+.box_dk {
+    margin: 2em 0;
+    background: #FFF;
+}
+.box_dk .box-title {
+    font-size: 1.2em;
+    background: #990000;
+    padding: 6px;
+    text-align: center;
+    color: #FFF;
+    font-weight: bold;
+    letter-spacing: 0.05em;
+}
+.box_dk p {
+    padding: 15px 20px;
+    margin: 0;
+}
+
+.box_nez {
+    margin: 2em 0;
+    background: #FFF;
+}
+.box_nez .box-title {
+    font-size: 1.2em;
+    background: #e6bf00;
+    padding: 6px;
+    text-align: center;
+    color: #FFF;
+    font-weight: bold;
+    letter-spacing: 0.05em;
+}
+.box_nez p {
+    padding: 15px 20px;
+    margin: 0;
+}
+
 a.btn--orange {
   color: #fff;
   background-color: #0067c0;
