--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   font-family: HeadLineA;
     -webkit-text-stroke: 1px #FFF;
   text-stroke: 1px #FFF;
+  font-size: xxrem
   width: 100%;
   left: 0;
   top: 0;
