--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
   font-family: HeadLineA;
     -webkit-text-stroke: 1px #FFF;
   text-stroke: 1px #FFF;
-  font-size: xxrem
   width: 100%;
   left: 0;
   top: 0;
@@ -23,6 +22,7 @@
 }
 .navigation li {
   margin-right: 55px;
+  font-size: 2rem;
 }
 .navigation a {
   color: #FFFFFF;
