--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   top: 0;
   height: 260px;
   background-image: url(header-img.jpg);
+  border-bottom: 2px solid #ff0000;
 }
 .navigation {
   width: 100%;
