--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 .navigation {
   width: 100%;
   height: 90px;
-  background-color: #87cefa;
+  background-color: #6495ed;
   padding-top: 15px;
   box-sizing: border-box;
 }
